@@ -130,6 +130,7 @@ Memory-mapped file objects support the following methods:
 \end{methoddesc}
 
 \begin{methoddesc}{resize}{\var{newsize}}
+  Resizes the map and the underlying file, if any.
   If the mmap was created with \constant{ACCESS_READ} or
   \constant{ACCESS_COPY}, resizing the map will throw a \exception{TypeError} exception.
 \end{methoddesc}
